Fixed a bug in RotatingAlertFeed where long usernames in the bar didn't truncate with ellipsis

--- a/RotatingAlertFeed/widget.css
+++ b/RotatingAlertFeed/widget.css
@@ -111,6 +111,7 @@ html {
 }
 
 .bar span {
+    white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
 
